Add Privacy Policy and Terms of Service pages

--- a/index.html
+++ b/index.html
@@ -731,6 +731,10 @@
 
     <!-- Footer -->
     <footer>
+        <p style="margin-bottom: 20px;">
+            <a href="/privacy.html" style="margin: 0 10px;">Privacy Policy</a> |
+            <a href="/terms.html" style="margin: 0 10px;">Terms of Service</a>
+        </p>
         <p><span class="footer-brand">&copy; 2026 COORDINATED INC.</span> All rights reserved.</p>
         <p>Building the coordination layer for humanity.</p>
     </footer>
